--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,20 @@ werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
-boto3 = "*"
+boto3 = "==1.34.45"
+requests = "==2.31.0"
+botocore = "==1.34.45"
+jmespath = "==1.0.1"
+s3transfer = "==0.10.0"
+urllib3 = "==1.26.18"
+cachetools = "==5.3.1"
+certifi = "==2023.7.22"
+charset-normalizer = "==3.2.0"
+google-auth-oauthlib = "==1.0.0"
+google-auth = "==2.22.0"
+oauthlib = "==3.2.2"
+requests-oauthlib = "==1.3.1"
+rsa = "==4.9"
 
 [dev-packages]
 
